Making a well structured webpage with Flexbox and Grid Layout

--- a/code_files/grid.html
+++ b/code_files/grid.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="grid.css" />
   </head>
   <body>
+    <header>
+      <a href="/code_files/index.html">Flexbox Layout</a>
+      <a href="#">Grid Layout</a>
+    </header>
     <main>
       <div class="item_1"></div>
       <div class="item_2"></div>
