--- a/code_files/index.html
+++ b/code_files/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox Layout</title>
+    <link
+      rel="shortcut icon"
+      href="/images-20220617T085547Z-001/images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap"
@@ -16,6 +21,10 @@
     />
   </head>
   <body>
+    <header>
+      <a href="#">Flexbox Layout</a>
+      <a href="/code_files/grid.html">Grid Layout</a>
+    </header>
     <main>
       <div class="sedans">
         <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
