--- a/code_files/grid.html
+++ b/code_files/grid.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid Layout</title>
+    <link
+      rel="shortcut icon"
+      href="/images-20220617T085547Z-001/images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="grid.css" />
   </head>
   <body>
