Structured WebPages that apply the Grid and Flexbox Layout

--- a/grid.html
+++ b/grid.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <a href="/code_files/index.html">Flexbox Layout</a>
+      <a href="index.html">Flexbox Layout</a>
       <a href="#">Grid Layout</a>
     </header>
     <main>
