--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <a href="#">Flexbox Layout</a>
-      <a href="/code_files/grid.html">Grid Layout</a>
+      <a href="grid.html">Grid Layout</a>
     </header>
     <main>
       <div class="sedans">
