--- a/grid.html
+++ b/grid.html
@@ -7,7 +7,7 @@
     <title>Grid Layout</title>
     <link
       rel="shortcut icon"
-      href="/images-20220617T085547Z-001/images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="grid.css" />
